tests/snapshots/admin_panels__admin_audit.snap
---
source: tests/admin_panels.rs
expression: rendered
---
<!DOCTYPE html>
<html lang="en" data-theme="blue">
  <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Audit Log</title>
    <meta name="description" content="Recent changes">
    <link rel="stylesheet" href="/static/common/tokens.css?v=0.1.11">
    <link rel="stylesheet" href="/static/admin/app.css?v=0.1.11">
    <script type="module" src="/static/common/components.js?v=0.1.11" defer></script>
    <script type="module" src="/static/common/datastar-init.js?v=0.1.11" defer></script>
    
  </head>
  <body data-page="admin">
    
<admin-shell data-structure="columns" role="document">
  <admin-nav role="navigation" aria-label="Admin navigation">
    <h1 data-role="brand">Soffio Admin</h1>
    
  </admin-nav>
  <admin-main role="main">
    <aside data-admin-toast="stack" aria-live="polite"></aside>
    
<section data-role="panel">
  <header data-role="panel-header">
    <h2 data-role="panel-title">Audit Log</h2>
  </header>
  <div data-role="panel-body">
    <form data-role="filter-form" method="get">
      <label>
        <span>Actor</span>
        <input type="text" name="actor" value="admin">
      </label>
      <label>
        <span>Action</span>
        <input type="text" name="action" value="post">
      </label>
      <label>
        <span>Entity Type</span>
        <input type="text" name="entity_type" value="post">
      </label>
      <label>
        <span>Search</span>
        <input type="text" name="search" value="123">
      </label>
      <div data-role="filter-actions">
        <button type="submit">Apply Filters</button>
        
        <a href="/audit" data-role="secondary">Clear</a>
        
      </div>
    </form>
    <table data-role="audit-table">
      <thead>
        <tr>
          <th scope="col">Actor</th>
          <th scope="col">Action</th>
          <th scope="col">Entity</th>
          <th scope="col">Recorded</th>
        </tr>
      </thead>
      <tbody>
        
        <tr data-role="audit-row" data-audit-id="00000000-0000-0000-0000-000000000000">
          <td>admin</td>
          <td>post.update</td>
          <td>post:123</td>
          <td>2025-10-24T12:00:00Z</td>
        </tr>
        
      </tbody>
    </table>
    
    <nav data-role="pagination">
      <a data-role="next" href="/audit?cursor=audit-next&actor=admin&#38;action=post&#38;entity_type=post&#38;search=123">Next</a>
    </nav>
    
  </div>
</section>

  </admin-main>
</admin-shell>

  </body>
</html>
