tests/snapshots/admin_panels__admin_jobs.snap
---
source: tests/admin_panels.rs
expression: rendered
---
<!DOCTYPE html>
<html lang="en" data-theme="blue">
  <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Jobs</title>
    <meta name="description" content="Job queue">
    <link rel="stylesheet" href="/static/common/tokens.css?v=0.1.7">
    <link rel="stylesheet" href="/static/admin/app.css?v=0.1.7">
    <script type="module" src="/static/common/components.js?v=0.1.7" defer></script>
    <script type="module" src="/static/common/datastar-init.js?v=0.1.7" defer></script>
    
  </head>
  <body data-page="admin">
    
<admin-shell data-structure="columns" role="document">
  <admin-nav role="navigation" aria-label="Admin navigation">
    <h1 data-role="brand">Soffio Admin</h1>
    
  </admin-nav>
  <admin-main role="main">
    <aside data-admin-toast="stack" aria-live="polite"></aside>
    
<section data-role="panel">
  <header data-role="panel-header">
    <h2 data-role="panel-title">Jobs</h2>
  </header>
  <div data-role="panel-body">
    
    <div data-role="flash" data-flash-kind="info">Filtered</div>
    

    <form data-role="filter-form" method="get">
      <label>
        <span>State</span>
        <select name="state">
          
          <option value="" >All states</option>
          
          <option value="failed" selected>Failed</option>
          
        </select>
      </label>
      <label>
        <span>Type</span>
        <select name="job_type">
          
          <option value="" >All types</option>
          
          <option value="render_post" selected>Render Post</option>
          
        </select>
      </label>
      <label>
        <span>Search</span>
        <input type="text" name="search" value="job-1">
      </label>
      <div data-role="filter-actions">
        <button type="submit">Apply Filters</button>
        
        <a href="/jobs" data-role="secondary">Clear</a>
        
      </div>
    </form>

    <table data-role="jobs-table">
      <thead>
        <tr>
          <th scope="col">Job Type</th>
          <th scope="col">Status</th>
          <th scope="col">Scheduled</th>
          <th scope="col">Created</th>
          <th scope="col">Error</th>
          <th scope="col">Actions</th>
        </tr>
      </thead>
      <tbody>
        
        <tr data-role="job-row" data-job-id="job-1">
          <td>render_post</td>
          <td>Failed</td>
          <td>2025-10-25T09:00:00Z</td>
          <td>2025-10-25T09:05:00Z</td>
          <td>panic: boom</td>
          <td data-role="job-actions">
            <a href="/jobs/job-1?state=failed&#38;job_type=render_post&#38;search=job-1&#38;cursor=prev-cursor" data-role="secondary">View</a>
            
            <form method="post" action="/jobs/job-1/retry" data-role="inline-form">
              <input type="hidden" name="state" value="failed">
              <input type="hidden" name="job_type" value="render_post">
              <input type="hidden" name="search" value="job-1">
              <input type="hidden" name="cursor" value="prev-cursor">
              <button type="submit" data-role="primary">Retry</button>
            </form>
            
            
          </td>
        </tr>
        
      </tbody>
    </table>
    
    <nav data-role="pagination">
      <a data-role="next" href="/jobs?cursor=next-cursor&state=failed&#38;job_type=render_post&#38;search=job-1">Next</a>
    </nav>
    
  </div>
</section>

  </admin-main>
</admin-shell>

  </body>
</html>
