tests/snapshots/admin_panels__admin_pages_panel.snap
---
source: tests/admin_panels.rs
expression: rendered
---

<section data-role="panel" data-admin-panel="pages">
  <header data-role="panel-header">
    <h2 data-role="panel-title">Pages</h2>
  </header>
  <div data-role="panel-body">

    <div data-role="panel-toolbar">
      <a href="/pages/new">New Page</a>
</div>




    <status-filters role="list">
      
      <status-filter role="listitem">
        <form data-role="status-filter-form" method="post" action="/pages/panel" data-on-submit__prevent="(@post(`/pages/panel`, { contentType: 'form' }))">
          
          
          <input type="hidden" name="search" value="about">
          
          
          
          
          <input type="hidden" name="month" value="2025-10">
          
          
          <button type="submit" data-role="status-filter" data-state="active">
            All (1)
          </button>
        </form>
      </status-filter>
      
    </status-filters>
    <form data-role="filter-form" method="post" action="/pages/panel" data-on-submit__prevent="(@post(`/pages/panel`, { contentType: 'form' }))">
      
      
      
      <label>
        <span>Month</span>
        <select name="month">
          <option value="" >All months</option>
          
          <option value="2025-10" selected>October 2025 (1)</option>
          
        </select>
      </label>
      
      <label>
        <span>Search</span>
        <input type="text" name="search" value="about">
      </label>
      <div data-role="filter-actions">
        <button type="submit">Apply Filters</button>
        
        <button type="submit" name="clear" value="1" data-role="secondary">Clear</button>
        
      </div>
    </form>




    <table data-role="publishable-table">
      <thead>
        <tr>
          <th scope="col" data-column="title">Title</th>
          <th scope="col" data-column="slug">Slug</th>
          <th scope="col" data-column="status">Status</th>
          <th scope="col">Published/Updated</th>
          <th scope="col">Actions</th>
        </tr>
      </thead>
      <tbody>
        
        <tr data-role="page-row" data-page-id="321">
          <td data-column="title">
            <a href="http://localhost:3000/pages/_preview/321" target="_blank" rel="noopener" title="About">About</a>
          </td>
          <td data-column="slug">
            <span data-role="slug-value" title="about">about</span>
          </td>
          <td data-column="status">
            <span data-role="status-badges">
              <status-badge data-status="published">Published</status-badge>
            </span>
          </td>
          <td>
            
            2025-10-24T12:00:00Z
            
          </td>
          <td data-role="publishable-actions">
              <div data-role="row-actions">
                <a href="/pages/about/edit">Edit</a>
                
                
                <form data-role="inline-form" method="post" action="/pages/321/draft"
                  data-on-submit__prevent="(@post(`/pages/321/draft`, { contentType: 'form' }))">
                  <input type="hidden" name="id" value="321">
                  <input type="hidden" name="status_filter" value="">
                  <input type="hidden" name="filter_search" value="about">
                  <input type="hidden" name="filter_tag" value="">
                  <input type="hidden" name="filter_month" value="2025-10">
                  
                  
                  <button type="submit">Move to Draft</button>
                </form>
                
                
                <form data-role="inline-form" method="post"
                  action="/pages/321/delete"
                  data-on-submit__prevent="(@post(`/pages/321/delete`, { contentType: 'form' }))">
                  <input type="hidden" name="id" value="321">
                  <input type="hidden" name="status_filter" value="">
                  <input type="hidden" name="filter_search" value="about">
                  <input type="hidden" name="filter_tag" value="">
                  <input type="hidden" name="filter_month" value="2025-10">
                  
                  
                  <button type="submit" data-variant="danger">Delete</button>
                </form>
              </div>
          </td>
        </tr>
        
      </tbody>
    </table>
    <nav data-role="pagination">
      <form data-role="pagination-form" method="post" action="/pages/panel" data-on-submit__prevent="(@post(`/pages/panel`, { contentType: 'form' }))">
        
        
        <input type="hidden" name="search" value="about">
        
        
        
        
        <input type="hidden" name="month" value="2025-10">
        
        
        
          <button type="button" data-role="prev" disabled>Previous</button>
        
      </form>
      <form data-role="pagination-form" method="post" action="/pages/panel" data-on-submit__prevent="(@post(`/pages/panel`, { contentType: 'form' }))">
        
        
        <input type="hidden" name="search" value="about">
        
        
        
        
        <input type="hidden" name="month" value="2025-10">
        
        
        
          <button type="button" data-role="next" disabled>Next</button>
        
      </form>
    </nav>

  </div>
</section>
